--- a/echo/CMakeLists.txt
+++ b/echo/CMakeLists.txt
@@ -3,5 +3,6 @@ project(echo)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES main.c echo_client.c)
 add_executable(echo ${SOURCE_FILES})
+
